--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -11,9 +11,9 @@ jobs:
         with:
           ref: main
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.11.0
+        uses: zaproxy/action-baseline@v0.13.0
         with:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://testphp.vulnweb.com/'
-          rules_file_name: '.zap/rules.tsv'
+          #rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
